--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool foods</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Jona Recipes</h1>
-    <ul>
-        <li><a href="recipes/salsa.html">Salsa!</a></li>
-        <li><a href="recipes/meatballs.html">Meatballs!</a></li>
-        <li><a href="">Recipe 3?</a></li>
+    <h1 id="recipe-headline">Jona's Erotic Recipes</h1>
+    <ul class="un-list">
+        <li class="un-list"><a href="recipes/salsa.html">Salsa!</a></li>
+        <li class="un-list"><a href="recipes/meatballs.html">Meatballs!</a></li>
+        <li class="un-list"><a href="">Recipe 3?</a></li>
     </ul>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
+    <marquee class="marquee1" behavior="scroll" direction="left" scrollamount="8">Jona rules!</marquee>
+    <marquee class="marquee2" behavior="scroll" direction="right" scrollamount="20">Jona rules!</marquee>
+    <marquee class="marquee3" behavior="scroll" direction="left" scrollamount="35">Jona rules!</marquee>
+    <marquee class="marquee4" behavior="scroll" direction="right" scrollamount="50">Jona rules!</marquee>
 </body>
 </html>
